# hrl-portfolio

./: .gitignore  LICENSE  README.md  SIMPLICIAL_RELAX.md  body_pos_data.json  body_pos_testbed.py  chess_emoji.vim  chronology.py  frustrated.py  frustrated_data.json  index.html  maestro.html  make_body_pos_gif.py  make_consensus_viz.py  make_figures.py  make_godel_viz.py  make_leap_gif.py  make_mocap_gif.py  make_morphogenesis_gif.py  make_quantum_viz.py  make_som_gif.py  morphogenesis_data.json  morphogenesis_grow_data.json  morphogenesis_remodel_data.json  morphogenesis_v2.py  morphogenesis_v3.py  morphogenesis_v4.py  pyproject.toml  service-worker.js  simplicial.py  simplicial3d.py  simplicial3d_data.json  simplicial_data.json
assets/: README.md
atlanta/: index.html
beena/: index.html
bible-hrl/: explorer.html  explorer_data.json  index.html  relaxation.html  scatter.html  simplex.html  tensor.html  trajectories.html
body-pos/: index.html
catfish-lane/: index.html
chess-biometric/: index.html
chess-brain/: index.html
chess-logic/: index.html
chess-mind/: index.html
chess-premove/: index.html
chronology/: index.html
cover-songs/: README.md  index.html  repertoire.csv
el-cuento/: index.html
elbies-world/: music.html
essays/: almost.html  augustines-folly.html  index.html  poor-king-agrippa.html  some-quotes-from-a-book-i-like.html  the-parable-of-the-farmer.html  war-to-end-all-wars.html
examples/: README.md  body_pos_demo.py  chess_maxims_demo.py  core_demo.py  godel_consensus_demo.py  kierkegaard_leap_demo.py  mocap_tracking_demo.py  (+5 more)
(+112 files in other folders)
