[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hrl"
version = "0.1.0"
description = "Hierarchical relaxation labeling — one engine for marker correspondence, role labeling, and weighted model consensus."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "R. Michael Glover" }]
keywords = ["relaxation-labeling", "motion-capture", "correspondence", "hummel-zucker", "computer-vision"]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["hrl*"]
